added the correct DB

--- a/migrate.ipynb
+++ b/migrate.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,15 +139,8 @@
     "app_sql.config['SQLALCHEMY_DATABASE_URI'] = deployment[0]\n",
     "app_sql.config['SECRET_KEY'] = \"1b308e20a6f3193e43c021bb1412808f\"\n",
     "app_sql.config['SQLALCHEMY_TRACK_MODIFICATIONS'] = True\n",
-    "db = SQLAlchemy(app_sql)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "db = SQLAlchemy(app_sql)\n",
+    "\n",
     "class user_db(db.Model):\n",
     "    id = db.Column(db.String(200), primary_key=True)\n",
     "    admin = db.Column(db.Boolean)\n",
@@ -239,46 +232,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SELECT user_db.id AS user_db_id, user_db.admin AS user_db_admin, user_db.name AS user_db_name, user_db.email AS user_db_email, user_db.username AS user_db_username, user_db.password AS user_db_password, user_db.credit AS user_db_credit \n",
-      "FROM user_db\n",
-      "User Name: Siva\n",
-      "Email: shiva@wipro.com            \n",
-      "Admin: False\n",
-      "Credit: True\n",
-      "User Name: Prabuk\n",
-      "Email: prabu@wipro.com            \n",
-      "Admin: False\n",
-      "Credit: True\n",
-      "User Name: Shivaganesh\n",
-      "Email: shivaganeshM@wipro.com            \n",
-      "Admin: False\n",
-      "Credit: True\n",
-      "User Name: Joshva\n",
-      "Email: joshvaA@wipro.com            \n",
-      "Admin: False\n",
-      "Credit: True\n",
-      "User Name: Sagnik\n",
-      "Email: sagnikD@wipro.com            \n",
-      "Admin: False\n",
-      "Credit: True\n",
-      "User Name: Shrutibhardwaj\n",
-      "Email: shrutiBhardwaj@wipro.com            \n",
-      "Admin: False\n",
-      "Credit: True\n",
-      "User Name: Joshva\n",
-      "Email: JoshvaA@wipro.com            \n",
-      "Admin: False\n",
-      "Credit: False\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "query = db.session.query(user_db)\n",
     "print(query)\n",
@@ -292,72 +248,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SELECT questions_db.id AS questions_db_id, questions_db.question AS questions_db_question, questions_db.author AS questions_db_author, questions_db.likes AS questions_db_likes, questions_db.time_asked AS questions_db_time_asked \n",
-      "FROM questions_db\n",
-      "User ID: 7f738f6c-c791-4f9c-84b4-a4dfe98eb365\n",
-      "Question: What Is The Duration Of The Internship?\n",
-      "Popularity: 3\n",
-      "User ID: 7f738f6c-c791-4f9c-84b4-a4dfe98eb365\n",
-      "Question: Some Of The Member On Our Team Have Been Onboarded, Can We Get Replacement Members?\n",
-      "Popularity: 0\n",
-      "User ID: 7f738f6c-c791-4f9c-84b4-a4dfe98eb365\n",
-      "Question: How Many Projects Will We Need To Do In The Internship?\n",
-      "Popularity: 0\n",
-      "User ID: 7f738f6c-c791-4f9c-84b4-a4dfe98eb365\n",
-      "Question: When Will The Assessment Be Taken?\n",
-      "Popularity: 2\n",
-      "User ID: 566a9a59-4132-4bf2-b063-59c3b6037a97\n",
-      "Question: What Is The Completion Necessary For Appearing In The Assessment?\n",
-      "Popularity: 0\n",
-      "User ID: 566a9a59-4132-4bf2-b063-59c3b6037a97\n",
-      "Question: Can I Get Help For Personal Questions Here?\n",
-      "Popularity: 1\n",
-      "User ID: 566a9a59-4132-4bf2-b063-59c3b6037a97\n",
-      "Question: Can We Share The Answers To Our Friends?\n",
-      "Popularity: 1\n",
-      "User ID: 566a9a59-4132-4bf2-b063-59c3b6037a97\n",
-      "Question: What Will Happen If We Get Onborded Bfore The Intership Ends?\n",
-      "Popularity: 0\n",
-      "User ID: c4f758be-bd3a-4d4c-8066-f9a159b34f4f\n",
-      "Question: What Will Happen If We Can'T Finish The Project Bfore The Intership Ends?\n",
-      "Popularity: 2\n",
-      "User ID: c4f758be-bd3a-4d4c-8066-f9a159b34f4f\n",
-      "Question: Will Out Project Affect The Projects We Are Assigned In Our Workplace?\n",
-      "Popularity: 0\n",
-      "User ID: c4f758be-bd3a-4d4c-8066-f9a159b34f4f\n",
-      "Question: Can We Get The Contact Number Of Our Metor?\n",
-      "Popularity: -3\n",
-      "User ID: c4f758be-bd3a-4d4c-8066-f9a159b34f4f\n",
-      "Question: Is It Mandetory To Do A Project?\n",
-      "Popularity: 1\n",
-      "User ID: 67ac2323-6e65-4e56-83aa-79eca5e5681c\n",
-      "Question: How To Delay My Onboarding?\n",
-      "Popularity: 0\n",
-      "User ID: 7f738f6c-c791-4f9c-84b4-a4dfe98eb365\n",
-      "Question: Can We Use The Code We Made For Our Project For Personal Uses?\n",
-      "Popularity: 0\n",
-      "User ID: 7f738f6c-c791-4f9c-84b4-a4dfe98eb365\n",
-      "Question: What Are The Technologies We Can Use In Our Projects?\n",
-      "Popularity: 4\n",
-      "User ID: e5d346e2-e193-4ac3-961e-bc8f98c52f85\n",
-      "Question: What Does It Mean By Project Being Useful For The Business?\n",
-      "Popularity: 1\n",
-      "User ID: 7f738f6c-c791-4f9c-84b4-a4dfe98eb365\n",
-      "Question: How To Edit A Question?\n",
-      "Popularity: 4\n",
-      "User ID: ec161ab3-5c9e-4353-a321-3d35c20c8da6\n",
-      "Question: What Are Some Of The Coding Standard We Need To Follow For Our Project?\n",
-      "Popularity: 1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "query = db.session.query(questions_db)\n",
     "print(query)\n",
@@ -371,78 +264,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SELECT answers_db.id AS answers_db_id, answers_db.answers AS answers_db_answers, answers_db.author AS answers_db_author, answers_db.question AS answers_db_question, answers_db.time_answered AS answers_db_time_answered \n",
-      "FROM answers_db\n",
-      "Question ID: d3a14375-3326-4e5c-a72f-7c298a874d87\n",
-      "Answer: 3 Months\n",
-      "Question ID: ffdba60b-1736-4fed-8001-0685384d49af\n",
-      "Answer: 100% Is Necessary\n",
-      "Question ID: ace0082e-5b86-4369-a91c-e4d6f164b347\n",
-      "Answer: It'S Not Stated As Of Now.\n",
-      "\n",
-      "Question ID: d775826d-f4d3-45bf-a7a0-034ddd9004d8\n",
-      "Answer: It'S Done For Most Of Us, For The Rest It Will Be Done Later.\n",
-      "Question ID: 02bff6c6-45f3-4853-935a-f90c8a5f76ce\n",
-      "Answer: No,This Is A Company Forum.\n",
-      "Question ID: 7fa20df2-60f2-4863-b6b4-1d2d1a9a7ad0\n",
-      "Answer: Yes, As Long As They Are Wipro Employees.\n",
-      "Question ID: 21d129f7-f513-4e8f-9c9b-408bbd08a6f2\n",
-      "Answer: Yes It'S Mandatory.\n",
-      "Question ID: 937e2aa2-f733-48a6-980c-17116289a23d\n",
-      "Answer: There Can Be Two Projects.\n",
-      "Question ID: c616d430-3b21-48e1-9f76-b208152f3693\n",
-      "Answer: All The Assigned Teams Have Their Designated Projects And As Such Can'T Help, If They Finish Before Scheduled Maybe You Can Request Some Help.\n",
-      "Question ID: d3a14375-3326-4e5c-a72f-7c298a874d87\n",
-      "Answer: 12 Weeks\n",
-      "Question ID: 937e2aa2-f733-48a6-980c-17116289a23d\n",
-      "Answer: At Least One Has To Completed And Presented To The Mentors, More May Then Be Assigned\n",
-      "Question ID: 7b5b2549-be3c-434e-966e-d8ea2d3c0d89\n",
-      "Answer: You Should Try Not To Find That Out.\n",
-      "Question ID: 254ee3d6-b5cc-4c58-9773-671bb48891be\n",
-      "Answer: No, Our Mentor Has Made It Clear That He Will Not Like To Be Contacted Outside Of Work Hours.\n",
-      "Question ID: d775826d-f4d3-45bf-a7a0-034ddd9004d8\n",
-      "Answer: You Will Get An Email The Day Before It Will Be Taken.\n",
-      "Question ID: 6731c65b-8df6-4768-bc7b-b81719a085a2\n",
-      "Answer: It Will Be Decided As And When You Are On Boarded.\n",
-      "Question ID: 871afc02-1b2a-4c5b-99f7-965c0f879396\n",
-      "Answer: It Can Be Delayed But It'S Shouldn'T Be Done Unless Absolutely Necessary.\n",
-      "\n",
-      "Please Contact The Onboarding Personnel, It It Must Be Done.\n",
-      "Question ID: 7fa20df2-60f2-4863-b6b4-1d2d1a9a7ad0\n",
-      "Answer: No, This Is An Internal Forum So No Friends Form Outside The Organization Should Be Given The Access To This.\n",
-      "Question ID: 1eca45e0-77f1-49a2-94d2-073055652318\n",
-      "Answer: I Have Figured It Out Myself, We Need To Make The Project Serve A Real Use That Can Help The Organization.\n",
-      "Question ID: 01418c32-2685-457b-8f3e-81a8e4a39a79\n",
-      "Answer: Sadly, We Don'T Allow Edits, You Can Delete The Question By Going Into Yor Profile And Asking The Correct One Next Time.\n",
-      "Question ID: d31fe9af-336e-486e-84fe-7958adac0b59\n",
-      "Answer: Python Is A Must, But Other Than That You Can Use Anything Else For The Rest Of It.\n",
-      "Question ID: d31fe9af-336e-486e-84fe-7958adac0b59\n",
-      "Answer: We Can Use,Python, Javascript, Html, Css And Sql (Sqlite3)\n",
-      "\n",
-      "Question ID: ed55e8bd-c2ba-4664-9ce9-992a0f22a461\n",
-      "Answer: We Have To Follow These Few Simple Rules:\n",
-      "\n",
-      "1) Write Modularised Code That Can Be Easy To Explain And Debug\n",
-      "2) Give Ample Examples In The Documentation\n",
-      "3) Write Comments Whenever Necessary\n",
-      "4) Use A Vcs - Version Control System To Keep Track And Backups\n",
-      "5) Divide The Work So As To Make It Efficient.\n",
-      "Question ID: d31fe9af-336e-486e-84fe-7958adac0b59\n",
-      "Answer: Since Python And Sql Was The Focus Of The Pjp, They Are Recommended But Other Languages Can Be Used With These.\n",
-      "Question ID: 02bff6c6-45f3-4853-935a-f90c8a5f76ce\n",
-      "Answer: Personal Questions Are Not To Be Discussed In A Workplace Forum.\n",
-      "Question ID: 1eca45e0-77f1-49a2-94d2-073055652318\n",
-      "Answer: To Add To What You Have Found Out, Being Useful Doesn'T Mean Generating Revenue, Your Project Can Be An Inspiration Or Template For A Future Project Of The Company. \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "query = db.session.query(answers_db)\n",
     "print(query)\n",
@@ -456,42 +280,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SELECT question_responses.time AS question_responses_time, question_responses.question_id AS question_responses_question_id, question_responses.user_id AS question_responses_user_id, question_responses.response AS question_responses_response \n",
-      "FROM question_responses\n",
-      "Question ID: d3a14375-3326-4e5c-a72f-7c298a874d87                 is Liked by ec161ab3-5c9e-4353-a321-3d35c20c8da6 at 2022-05-01 19:01:29.497362\n",
-      "Question ID: d775826d-f4d3-45bf-a7a0-034ddd9004d8                 is Liked by ec161ab3-5c9e-4353-a321-3d35c20c8da6 at 2022-05-01 19:02:09.185872\n",
-      "Question ID: 7b5b2549-be3c-434e-966e-d8ea2d3c0d89                 is Liked by ec161ab3-5c9e-4353-a321-3d35c20c8da6 at 2022-05-01 19:06:25.604002\n",
-      "Question ID: 7b5b2549-be3c-434e-966e-d8ea2d3c0d89                 is Liked by 566a9a59-4132-4bf2-b063-59c3b6037a97 at 2022-05-01 19:28:45.505865\n",
-      "Question ID: 7fa20df2-60f2-4863-b6b4-1d2d1a9a7ad0                 is Liked by 566a9a59-4132-4bf2-b063-59c3b6037a97 at 2022-05-01 19:28:50.626265\n",
-      "Question ID: d3a14375-3326-4e5c-a72f-7c298a874d87                 is Liked by 566a9a59-4132-4bf2-b063-59c3b6037a97 at 2022-05-01 19:28:56.874593\n",
-      "Question ID: 21d129f7-f513-4e8f-9c9b-408bbd08a6f2                 is Liked by 67ac2323-6e65-4e56-83aa-79eca5e5681c at 2022-05-02 02:27:47.660998\n",
-      "Question ID: 937e2aa2-f733-48a6-980c-17116289a23d                 is Liked by 67ac2323-6e65-4e56-83aa-79eca5e5681c at 2022-05-02 02:27:55.539629\n",
-      "Question ID: c616d430-3b21-48e1-9f76-b208152f3693                 is Liked by 67ac2323-6e65-4e56-83aa-79eca5e5681c at 2022-05-02 02:28:00.191938\n",
-      "Question ID: d3a14375-3326-4e5c-a72f-7c298a874d87                 is Liked by 7f738f6c-c791-4f9c-84b4-a4dfe98eb365 at 2022-05-02 02:30:29.836394\n",
-      "Question ID: 02bff6c6-45f3-4853-935a-f90c8a5f76ce                 is Liked by 7f738f6c-c791-4f9c-84b4-a4dfe98eb365 at 2022-05-02 02:30:33.151034\n",
-      "Question ID: 21d129f7-f513-4e8f-9c9b-408bbd08a6f2                 is Liked by 7f738f6c-c791-4f9c-84b4-a4dfe98eb365 at 2022-05-02 02:30:38.210537\n",
-      "Question ID: d775826d-f4d3-45bf-a7a0-034ddd9004d8                 is Liked by 7f738f6c-c791-4f9c-84b4-a4dfe98eb365 at 2022-05-02 02:30:49.858431\n",
-      "Question ID: 7fa20df2-60f2-4863-b6b4-1d2d1a9a7ad0                 is Liked by 7f738f6c-c791-4f9c-84b4-a4dfe98eb365 at 2022-05-02 02:37:54.143043\n",
-      "Question ID: 1eca45e0-77f1-49a2-94d2-073055652318                 is Liked by e5d346e2-e193-4ac3-961e-bc8f98c52f85 at 2022-05-02 03:01:25.758574\n",
-      "Question ID: 01418c32-2685-457b-8f3e-81a8e4a39a79                 is Liked by 67ac2323-6e65-4e56-83aa-79eca5e5681c at 2022-05-02 03:05:07.213476\n",
-      "Question ID: d31fe9af-336e-486e-84fe-7958adac0b59                 is Liked by 67ac2323-6e65-4e56-83aa-79eca5e5681c at 2022-05-02 03:05:11.591304\n",
-      "Question ID: d31fe9af-336e-486e-84fe-7958adac0b59                 is Liked by e5d346e2-e193-4ac3-961e-bc8f98c52f85 at 2022-05-02 03:09:14.812366\n",
-      "Question ID: 01418c32-2685-457b-8f3e-81a8e4a39a79                 is Liked by e5d346e2-e193-4ac3-961e-bc8f98c52f85 at 2022-05-02 03:10:12.663900\n",
-      "Question ID: d31fe9af-336e-486e-84fe-7958adac0b59                 is Liked by ec161ab3-5c9e-4353-a321-3d35c20c8da6 at 2022-05-02 03:10:50.263259\n",
-      "Question ID: 01418c32-2685-457b-8f3e-81a8e4a39a79                 is Liked by ec161ab3-5c9e-4353-a321-3d35c20c8da6 at 2022-05-02 03:10:53.389313\n",
-      "Question ID: ed55e8bd-c2ba-4664-9ce9-992a0f22a461                 is Liked by 7f738f6c-c791-4f9c-84b4-a4dfe98eb365 at 2022-05-02 03:15:31.224610\n",
-      "Question ID: 01418c32-2685-457b-8f3e-81a8e4a39a79                 is Liked by 7f738f6c-c791-4f9c-84b4-a4dfe98eb365 at 2022-05-02 03:15:32.868430\n",
-      "Question ID: d31fe9af-336e-486e-84fe-7958adac0b59                 is Liked by 7f738f6c-c791-4f9c-84b4-a4dfe98eb365 at 2022-05-02 03:15:39.827625\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "query = db.session.query(question_responses)\n",
     "print(query)\n",
@@ -505,12 +296,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "db_psql.session.commit()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SELECT user_db.id AS user_db_id, user_db.admin AS user_db_admin, user_db.name AS user_db_name, user_db.email AS user_db_email, user_db.username AS user_db_username, user_db.password AS user_db_password, user_db.credit AS user_db_credit \n",
+      "FROM user_db \n",
+      "WHERE user_db.name = ?\n"
+     ]
+    }
+   ],
+   "source": [
+    "query = db.session.query(user_db).filter_by(name=\"PrabuK\")\n",
+    "print(query)\n",
+    "\n",
+    "to_edit = query.first()\n",
+    "\n",
+    "to_edit.name = \"Prabu\"\n",
+    "to_edit.username = \"Prabu\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = db.session.query(user_db).filter_by(name=\"Bhavana\").first()\n",
+    "query.credit = 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = db.session.query(answers_db).filter_by(id=\"2d0f7190-f565-45e7-8680-421dfdd18a98\").first()\n",
+    "db.session.delete(query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Question ID: 8b6c1a8d-5dd7-43bd-a6da-25287760c57e\n",
+      "Answer: In a internship you will work on the Learning, Exploration, Capstone Projects.\n",
+      "\n",
+      "Once completed you will get the Internship letter from Wipro.\n"
+     ]
+    }
+   ],
+   "source": [
+    "query = db.session.query(answers_db).filter_by(id=\"cd86298e-1a6c-43b6-9d64-d36149bc8c9b\").first()\n",
+    "\n",
+    "print(query)\n",
+    "\n",
+    "query.answers = \"In an internship you will work on the Learning, Exploration and Capstone Projects.\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "User ID: 32ef1187-3506-4cc5-abec-8cbfdbe5970e\n",
+      "Question: How are streams allocated in internship?\n",
+      "Popularity: 4\n",
+      "User ID: 1506c809-2af6-433c-a06f-764d38d4a543\n",
+      "Question: What is internship?\n",
+      "Popularity: 4\n",
+      "User ID: 26d48cd3-e9b3-42dd-b467-fb7f1774c01b\n",
+      "Question: What is velocity?\n",
+      "Popularity: 4\n",
+      "User ID: 483d29e9-9134-4302-b7d5-ee86859bca7e\n",
+      "Question: Can I do Internship program along with Velocity Program?\n",
+      "Popularity: 1\n",
+      "User ID: 512dd3c3-c014-41e5-81bf-686f9a2d7754\n",
+      "Question: Can I do PJP and Internship?\n",
+      "Popularity: 1\n",
+      "User ID: 4745dc2b-dcd4-420f-b5de-b3525d0c163a\n",
+      "Question: In between the Internship program if I leave can I get the Internship certificate?\n",
+      "Popularity: 1\n",
+      "User ID: e3f9b12c-4635-421e-b7c5-c02562be4cef\n",
+      "Question: What is duration of the Internship Program?\n",
+      "Popularity: 2\n",
+      "User ID: 98827c22-d36a-45d8-b972-bd5342690089\n",
+      "Question: what will be the percentage of attendance that is mandatory for internship to be completed?\n",
+      "Popularity: 1\n",
+      "User ID: bb211cf1-49c0-4031-a05c-3a58994a86c2\n",
+      "Question: How is my attendance being recorded?\n",
+      "Popularity: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for q in query:\n",
+    "    print(q)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db.session.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
