removed all secrets

--- a/migrate.ipynb
+++ b/migrate.ipynb
@@ -1,28 +1,38 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import datetime\n",
-    "import uuid\n",
-    "from functools import wraps\n",
+    "# This notebook converts the sqlite3 db to heroku postgresql"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Add your own postgresql uri\n",
     "\n",
-    "import jwt\n",
-    "from flask import Flask, make_response, request\n",
-    "from flask_cors import CORS\n",
-    "from flask_sqlalchemy import SQLAlchemy\n",
-    "from werkzeug.security import check_password_hash, generate_password_hash\n",
-    "deployment = ['sqlite:///database2.sqlite3',\n",
-    "              \"postgresql://ctsbvjgtogsxoz:46fb3b39855994d7ad5da1e45d95c71571553d07708a0c893b2257917a2ffcec@ec2-3-231-82-226.compute-1.amazonaws.com:5432/d3pdm0hkadu8si\"]\n",
-    "popularity_lim = 1\n"
+    "deployment should look like this:<br>\n",
+    "`deployment = [\"sqlite:///<Your DB>.sqlite3\",\n",
+    "                 \"postgresql://<user>:<password>@<host>:<port>/<database>\"]`\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from flask import Flask\n",
+    "from flask_sqlalchemy import SQLAlchemy\n",
+    "from secret import deployment\n",
+    "print(deployment)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,9 +242,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SELECT user_db.id AS user_db_id, user_db.admin AS user_db_admin, user_db.name AS user_db_name, user_db.email AS user_db_email, user_db.username AS user_db_username, user_db.password AS user_db_password, user_db.credit AS user_db_credit \n",
+      "FROM user_db\n",
+      "User Name: Prabu\n",
+      "Email: prabu@wipro.com            \n",
+      "Admin: False\n",
+      "Credit: True\n",
+      "User Name: Sagnik\n",
+      "Email: sagnik@wipro.com            \n",
+      "Admin: False\n",
+      "Credit: True\n",
+      "User Name: Joshva\n",
+      "Email: joshva@wipro.com            \n",
+      "Admin: False\n",
+      "Credit: True\n",
+      "User Name: Shivaganesh\n",
+      "Email: shivaganesh@wipro.com            \n",
+      "Admin: False\n",
+      "Credit: True\n",
+      "User Name: Shruti\n",
+      "Email: shruti@wipro.com            \n",
+      "Admin: False\n",
+      "Credit: True\n",
+      "User Name: Bhavana\n",
+      "Email: bhavana@wipro.com            \n",
+      "Admin: False\n",
+      "Credit: True\n",
+      "User Name: Tirupathi\n",
+      "Email: tirupathi@wipro.com            \n",
+      "Admin: False\n",
+      "Credit: True\n",
+      "User Name: Neetha\n",
+      "Email: neetha@wipro.com            \n",
+      "Admin: False\n",
+      "Credit: True\n",
+      "User Name: Ashwin\n",
+      "Email: ashwin@wipro.com            \n",
+      "Admin: False\n",
+      "Credit: True\n",
+      "User Name: Siva\n",
+      "Email: siva@wipro.com            \n",
+      "Admin: False\n",
+      "Credit: True\n",
+      "User Name: thipori\n",
+      "Email: thipori@gmail.com            \n",
+      "Admin: False\n",
+      "Credit: False\n",
+      "User Name: nesamani\n",
+      "Email: nesamani@gmail.com            \n",
+      "Admin: False\n",
+      "Credit: False\n"
+     ]
+    }
+   ],
    "source": [
     "query = db.session.query(user_db)\n",
     "print(query)\n",
@@ -243,63 +310,7 @@
     "    print(q)\n",
     "    item = user_db(id=q.id, name=q.name, email=q.email,\n",
     "                               password=q.password, admin=q.admin, username=q.username)\n",
-    "    db_psql.session.add(item)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "query = db.session.query(questions_db)\n",
-    "print(query)\n",
-    "\n",
-    "for q in query:\n",
-    "    print(q)\n",
-    "    item = questions_db(id=q.id, question=q.question,\n",
-    "                        author=q.author, asked_on=q.time_asked, likes=q.likes)\n",
-    "    db_psql.session.add(item)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "query = db.session.query(answers_db)\n",
-    "print(query)\n",
-    "\n",
-    "for q in query:\n",
-    "    print(q)\n",
-    "    item = answers_db(id=q.id, answer=q.answers, author=q.author,\n",
-    "                      time_answer=q.time_answered, question=q.question)\n",
-    "    db_psql.session.add(item)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "query = db.session.query(question_responses)\n",
-    "print(query)\n",
-    "\n",
-    "for q in query:\n",
-    "    print(q)\n",
-    "    item = question_responses(\n",
-    "        response=q.response, user=q.user_id, question=q.question_id, time=q.time)\n",
-    "    db_psql.session.add(item)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    db_psql.session.add(item)\n",
     "db_psql.session.commit()"
    ]
   },
@@ -312,81 +323,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SELECT user_db.id AS user_db_id, user_db.admin AS user_db_admin, user_db.name AS user_db_name, user_db.email AS user_db_email, user_db.username AS user_db_username, user_db.password AS user_db_password, user_db.credit AS user_db_credit \n",
-      "FROM user_db \n",
-      "WHERE user_db.name = ?\n"
-     ]
-    }
-   ],
-   "source": [
-    "query = db.session.query(user_db).filter_by(name=\"PrabuK\")\n",
-    "print(query)\n",
-    "\n",
-    "to_edit = query.first()\n",
-    "\n",
-    "to_edit.name = \"Prabu\"\n",
-    "to_edit.username = \"Prabu\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "query = db.session.query(user_db).filter_by(name=\"Bhavana\").first()\n",
-    "query.credit = 6"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "query = db.session.query(answers_db).filter_by(id=\"2d0f7190-f565-45e7-8680-421dfdd18a98\").first()\n",
-    "db.session.delete(query)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Question ID: 8b6c1a8d-5dd7-43bd-a6da-25287760c57e\n",
-      "Answer: In a internship you will work on the Learning, Exploration, Capstone Projects.\n",
-      "\n",
-      "Once completed you will get the Internship letter from Wipro.\n"
-     ]
-    }
-   ],
-   "source": [
-    "query = db.session.query(answers_db).filter_by(id=\"cd86298e-1a6c-43b6-9d64-d36149bc8c9b\").first()\n",
-    "\n",
-    "print(query)\n",
-    "\n",
-    "query.answers = \"In an internship you will work on the Learning, Exploration and Capstone Projects.\"\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "SELECT questions_db.id AS questions_db_id, questions_db.question AS questions_db_question, questions_db.author AS questions_db_author, questions_db.likes AS questions_db_likes, questions_db.time_asked AS questions_db_time_asked \n",
+      "FROM questions_db\n",
       "User ID: 32ef1187-3506-4cc5-abec-8cbfdbe5970e\n",
       "Question: How are streams allocated in internship?\n",
       "Popularity: 4\n",
       "User ID: 1506c809-2af6-433c-a06f-764d38d4a543\n",
       "Question: What is internship?\n",
-      "Popularity: 4\n",
+      "Popularity: 5\n",
       "User ID: 26d48cd3-e9b3-42dd-b467-fb7f1774c01b\n",
       "Question: What is velocity?\n",
       "Popularity: 4\n",
@@ -395,7 +339,7 @@
       "Popularity: 1\n",
       "User ID: 512dd3c3-c014-41e5-81bf-686f9a2d7754\n",
       "Question: Can I do PJP and Internship?\n",
-      "Popularity: 1\n",
+      "Popularity: 2\n",
       "User ID: 4745dc2b-dcd4-420f-b5de-b3525d0c163a\n",
       "Question: In between the Internship program if I leave can I get the Internship certificate?\n",
       "Popularity: 1\n",
@@ -403,7 +347,7 @@
       "Question: What is duration of the Internship Program?\n",
       "Popularity: 2\n",
       "User ID: 98827c22-d36a-45d8-b972-bd5342690089\n",
-      "Question: what will be the percentage of attendance that is mandatory for internship to be completed?\n",
+      "Question: What Will Be The Percentage Of Attendance That Is Mandatory For Internship To Be Completed?\n",
       "Popularity: 1\n",
       "User ID: bb211cf1-49c0-4031-a05c-3a58994a86c2\n",
       "Question: How is my attendance being recorded?\n",
@@ -412,17 +356,112 @@
     }
    ],
    "source": [
+    "query = db.session.query(questions_db)\n",
+    "print(query)\n",
+    "\n",
     "for q in query:\n",
-    "    print(q)"
+    "    print(q)\n",
+    "    item = questions_db(id=q.id, question=q.question,\n",
+    "                        author=q.author, asked_on=q.time_asked, likes=q.likes)\n",
+    "    db_psql.session.add(item)\n",
+    "db_psql.session.commit()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SELECT answers_db.id AS answers_db_id, answers_db.answers AS answers_db_answers, answers_db.author AS answers_db_author, answers_db.question AS answers_db_question, answers_db.time_answered AS answers_db_time_answered \n",
+      "FROM answers_db\n",
+      "Question ID: d190ab3d-ec57-4174-a1e7-f22babfd05bc\n",
+      "Answer: Streams are allocated based on the demand from the business\n",
+      "Question ID: 8b6c1a8d-5dd7-43bd-a6da-25287760c57e\n",
+      "Answer: This is a 10/16 week program from Wipro to fulfill the last semester requirements of your college\n",
+      "Question ID: 8b6c1a8d-5dd7-43bd-a6da-25287760c57e\n",
+      "Answer: In an internship you will work on the Learning, Exploration and Capstone Projects.\n",
+      "Question ID: 44c60a14-d1d4-42cf-af0b-9d8a2c13ce3d\n",
+      "Answer: Based on the business demands, Wipro had tied up with External Vendors to train people on the niche skills.\n",
+      "\n",
+      "Question ID: 62fb7534-f2c5-4d7f-95e0-d57cae499886\n",
+      "Answer: No. You have to choose either Internship or Velocity.\n",
+      "Question ID: 8b6c1a8d-5dd7-43bd-a6da-25287760c57e\n",
+      "Answer: Post joining the Wipro, you will be allocated to the projects and might not undergo the required training once again. This internship is done to prepare you for that.\n",
+      "Question ID: bc3f5f77-de61-4430-b5e7-0ed0688881ec\n",
+      "Answer: No, you have to do either PJP or Internship.\n",
+      "Question ID: 643ebbc4-96eb-43c5-bfc4-384d1d2ad919\n",
+      "Answer: No you can not.\n",
+      "Question ID: 40978274-f629-465b-9c28-487fec5ef1a7\n",
+      "Answer: Currently duration of the program is for 10 weeks, and 16 weeks based on the requirement.\n",
+      "Question ID: f92eea8b-fcc7-422e-a898-d4fd3b1c9172\n",
+      "Answer: You need to have 90 percentage of the attendance.\n",
+      "Question ID: ce7d0283-5fac-4e5d-b1e9-2abb91c1fc77\n",
+      "Answer: Your attendance will be recorded from your WebEx Login.\n",
+      "Question ID: 8b6c1a8d-5dd7-43bd-a6da-25287760c57e\n",
+      "Answer: Once completed you will get the Internship letter from Wipro.\n"
+     ]
+    }
+   ],
    "source": [
-    "db.session.commit()"
+    "query = db.session.query(answers_db)\n",
+    "print(query)\n",
+    "\n",
+    "for q in query:\n",
+    "    print(q)\n",
+    "    item = answers_db(id=q.id, answer=q.answers, author=q.author,\n",
+    "                      time_answer=q.time_answered, question=q.question)\n",
+    "    db_psql.session.add(item)\n",
+    "db_psql.session.commit()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SELECT question_responses.time AS question_responses_time, question_responses.question_id AS question_responses_question_id, question_responses.user_id AS question_responses_user_id, question_responses.response AS question_responses_response \n",
+      "FROM question_responses\n",
+      "Question ID: d190ab3d-ec57-4174-a1e7-f22babfd05bc                 is Liked by 26d48cd3-e9b3-42dd-b467-fb7f1774c01b at 2022-05-04 00:51:55.101828\n",
+      "Question ID: d190ab3d-ec57-4174-a1e7-f22babfd05bc                 is Liked by 483d29e9-9134-4302-b7d5-ee86859bca7e at 2022-05-04 01:04:02.406465\n",
+      "Question ID: 8b6c1a8d-5dd7-43bd-a6da-25287760c57e                 is Liked by 483d29e9-9134-4302-b7d5-ee86859bca7e at 2022-05-04 01:04:03.587542\n",
+      "Question ID: d190ab3d-ec57-4174-a1e7-f22babfd05bc                 is Liked by 32ef1187-3506-4cc5-abec-8cbfdbe5970e at 2022-05-04 01:06:36.076331\n",
+      "Question ID: 44c60a14-d1d4-42cf-af0b-9d8a2c13ce3d                 is Liked by 32ef1187-3506-4cc5-abec-8cbfdbe5970e at 2022-05-04 01:06:39.138074\n",
+      "Question ID: 8b6c1a8d-5dd7-43bd-a6da-25287760c57e                 is Liked by 512dd3c3-c014-41e5-81bf-686f9a2d7754 at 2022-05-04 01:20:15.968711\n",
+      "Question ID: 44c60a14-d1d4-42cf-af0b-9d8a2c13ce3d                 is Liked by 512dd3c3-c014-41e5-81bf-686f9a2d7754 at 2022-05-04 02:06:02.555808\n",
+      "Question ID: d190ab3d-ec57-4174-a1e7-f22babfd05bc                 is Liked by 512dd3c3-c014-41e5-81bf-686f9a2d7754 at 2022-05-04 02:06:37.798606\n",
+      "Question ID: 643ebbc4-96eb-43c5-bfc4-384d1d2ad919                 is Liked by 4745dc2b-dcd4-420f-b5de-b3525d0c163a at 2022-05-04 02:11:29.760346\n",
+      "Question ID: 44c60a14-d1d4-42cf-af0b-9d8a2c13ce3d                 is Liked by 4745dc2b-dcd4-420f-b5de-b3525d0c163a at 2022-05-04 02:11:36.901169\n",
+      "Question ID: 44c60a14-d1d4-42cf-af0b-9d8a2c13ce3d                 is Liked by e3f9b12c-4635-421e-b7c5-c02562be4cef at 2022-05-04 02:13:43.123619\n",
+      "Question ID: 8b6c1a8d-5dd7-43bd-a6da-25287760c57e                 is Liked by e3f9b12c-4635-421e-b7c5-c02562be4cef at 2022-05-04 02:13:46.363017\n",
+      "Question ID: 40978274-f629-465b-9c28-487fec5ef1a7                 is Liked by 98827c22-d36a-45d8-b972-bd5342690089 at 2022-05-04 02:14:45.933098\n",
+      "Question ID: 8b6c1a8d-5dd7-43bd-a6da-25287760c57e                 is Liked by 98827c22-d36a-45d8-b972-bd5342690089 at 2022-05-04 02:14:51.230883\n",
+      "Question ID: 62fb7534-f2c5-4d7f-95e0-d57cae499886                 is Liked by 98827c22-d36a-45d8-b972-bd5342690089 at 2022-05-04 02:14:53.794799\n",
+      "Question ID: 40978274-f629-465b-9c28-487fec5ef1a7                 is Liked by bb211cf1-49c0-4031-a05c-3a58994a86c2 at 2022-05-04 02:16:43.871058\n",
+      "Question ID: f92eea8b-fcc7-422e-a898-d4fd3b1c9172                 is Liked by bb211cf1-49c0-4031-a05c-3a58994a86c2 at 2022-05-04 02:16:45.186618\n",
+      "Question ID: bc3f5f77-de61-4430-b5e7-0ed0688881ec                 is Liked by bb211cf1-49c0-4031-a05c-3a58994a86c2 at 2022-05-04 02:16:46.519500\n",
+      "Question ID: 8b6c1a8d-5dd7-43bd-a6da-25287760c57e                 is Liked by 54ab9d43-229d-40e9-87e2-2e54ae0b3eef at 2022-05-04 02:31:15.609268\n",
+      "Question ID: bc3f5f77-de61-4430-b5e7-0ed0688881ec                 is Liked by 54ab9d43-229d-40e9-87e2-2e54ae0b3eef at 2022-05-04 02:31:17.883488\n"
+     ]
+    }
+   ],
+   "source": [
+    "query = db.session.query(question_responses)\n",
+    "print(query)\n",
+    "\n",
+    "for q in query:\n",
+    "    print(q)\n",
+    "    item = question_responses(\n",
+    "        response=q.response, user=q.user_id, question=q.question_id, time=q.time)\n",
+    "    db_psql.session.add(item)\n",
+    "db_psql.session.commit()\n"
    ]
   }
  ],
