fixed the sqlachemy issue

--- a/migrate.ipynb
+++ b/migrate.ipynb
@@ -20,9 +20,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['sqlite:///database2.sqlite3', 'postgresql://ctsbvjgtogsxoz:46fb3b39855994d7ad5da1e45d95c71571553d07708a0c893b2257917a2ffcec@ec2-3-231-82-226.compute-1.amazonaws.com:5432/d3pdm0hkadu8si']\n"
+     ]
+    }
+   ],
    "source": [
     "from flask import Flask\n",
     "from flask_sqlalchemy import SQLAlchemy\n",
@@ -51,7 +59,7 @@
     "    email = db_psql.Column(db_psql.String(100))\n",
     "    username = db_psql.Column(db_psql.String(200))\n",
     "    password = db_psql.Column(db_psql.String(200))\n",
-    "    credit = db_psql.Column(db_psql.Integer())\n",
+    "    credit = db_psql.Column(db_psql.Integer)\n",
     "\n",
     "    def __repr__(self):\n",
     "        return f'User Name: {self.username}\\nEmail: {self.email}\\\n",
@@ -116,7 +124,7 @@
     "        200), db_psql.ForeignKey('questions_db.id'))\n",
     "    user_id = db_psql.Column(db_psql.String(\n",
     "        200), db_psql.ForeignKey('user_db.id'))\n",
-    "    response = db_psql.Column(db_psql.Boolean())\n",
+    "    response = db_psql.Column(db_psql.Boolean)\n",
     "\n",
     "    def __repr__(self):\n",
     "        if self.response == True:\n",
@@ -158,7 +166,7 @@
     "    email = db.Column(db.String(100))\n",
     "    username = db.Column(db.String(200))\n",
     "    password = db.Column(db.String(200))\n",
-    "    credit = db.Column(db.Integer())\n",
+    "    credit = db.Column(db.Integer)\n",
     "\n",
     "    def __repr__(self):\n",
     "        return f'User Name: {self.username}\\nEmail: {self.email}\\\n",
@@ -218,7 +226,7 @@
     "    time = db.Column(db.DateTime, primary_key=True)\n",
     "    question_id = db.Column(db.String(200), db.ForeignKey('questions_db.id'))\n",
     "    user_id = db.Column(db.String(200), db.ForeignKey('user_db.id'))\n",
-    "    response = db.Column(db.Boolean())\n",
+    "    response = db.Column(db.Boolean)\n",
     "\n",
     "    def __repr__(self):\n",
     "        if self.response == True:\n",
@@ -308,10 +316,10 @@
     "\n",
     "for q in query:\n",
     "    print(q)\n",
-    "    item = user_db(id=q.id, name=q.name, email=q.email,\n",
-    "                               password=q.password, admin=q.admin, username=q.username)\n",
+    "    item = user_db(id=q.id, name=q.name, email=q.email, credit=q.credit,\n",
+    "                   password=q.password, admin=q.admin, username=q.username)\n",
     "    db_psql.session.add(item)\n",
-    "db_psql.session.commit()"
+    "db_psql.session.commit()\n"
    ]
   },
   {
